# ESP32-S3-Touch-LCD-1.46B-Kit

./: .gitignore  AGENT_FEATURE_IDEAS.md  APP_DEVELOPMENT.md  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_audio_capture.c  app_audio_capture.h  app_audio_downlink.c  app_audio_downlink.h  app_audio_profile.c  app_audio_profile.h  app_audio_uplink.c  app_audio_uplink.h  app_ble_link.c  app_ble_link.h  app_face.c  app_face.h  app_face_blit.c  app_face_blit.h  app_face_canvas.c  app_face_canvas.h  app_face_config.c  app_face_config.h  app_face_dirty.c  app_face_dirty.h  app_face_math.c  app_face_math.h  app_lcd.c  app_lcd.h  app_motion.c  app_motion.h  app_protocol.h  app_state.c  app_state.h  app_ui.c  app_ui.h  app_wakeword.c  app_wakeword.h  idf_component.yml  main.c  starter_ui.c  starter_ui.h
main/Audio_Driver/: PCM5101.c  PCM5101.h
main/LCD_Driver/: Display_SPD2010.c  Display_SPD2010.h
main/LVGL_Driver/: LVGL_Driver.c
main/MIC_Driver/: MIC_Speech.c  MIC_Speech.h
main/PWR_Key/: PWR_Key.c  PWR_Key.h
main/QMI8658/: QMI8658.c
