idf_component_register(
    SRCS
        "./main.c"
        "./app_audio_capture.c"
        "./app_audio_downlink.c"
        "./app_ble_link.c"
        "./app_state.c"
        "./app_ui.c"
        "./starter_ui.c"
        "./EXIO/TCA9554PWR.c"
        "./Audio_Driver/PCM5101.c"
        "./MIC_Driver/MIC_Speech.c"
        "./LCD_Driver/esp_lcd_spd2010/esp_lcd_spd2010.c"
        "./LCD_Driver/Display_SPD2010.c"
        "./Touch_Driver/Touch_SPD2010.c"
        "./LVGL_Driver/LVGL_Driver.c"
        "./SD_Card/SD_MMC.c"
        "./I2C_Driver/I2C_Driver.c"
        "./PCF85063/PCF85063.c"
        "./QMI8658/QMI8658.c"
        "./BAT_Driver/BAT_Driver.c"
        "./PWR_Key/PWR_Key.c"
    INCLUDE_DIRS
        "./Audio_Driver"
        "./MIC_Driver"
        "./LCD_Driver/esp_lcd_spd2010"
        "./LCD_Driver"
        "./Touch_Driver"
        "./LVGL_Driver"
        "./EXIO"
        "./SD_Card"
        "./I2C_Driver"
        "./PCF85063"
        "./QMI8658"
        "./BAT_Driver"
        "./PWR_Key"
        "."
    REQUIRES
        "esp_adc"
        "esp_lcd"
        "fatfs"
        "bt"
        "spi_flash"
    PRIV_REQUIRES
        "esp_audio_codec"
        "nvs_flash"
)
